// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Health/Dependency List Default 1`] = `
<div>
  <v-subheader>
    Dependencies
  </v-subheader>
   
  <v-list-tile>
    <v-layout
      class="service-dependency-item"
      row=""
    >
      <v-flex
        xs3=""
      >
        <v-img
          contain=""
          height="50px"
          src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1200px-Postgresql_elephant.svg.png"
        />
      </v-flex>
       
      <v-flex
        xs6=""
      >
        <v-list-tile-content>
          <v-list-tile-title>
            Postgres
          </v-list-tile-title>
        </v-list-tile-content>
      </v-flex>
       
      <v-flex
        class="health-status-indicator"
        xs3=""
      >
        <v-icon
          class="right"
          color="healthy"
        >
          mdi-check-circle-outline
        </v-icon>
      </v-flex>
    </v-layout>
  </v-list-tile>
  <v-list-tile>
    <v-layout
      class="service-dependency-item"
      row=""
    >
      <v-flex
        xs3=""
      >
        <v-img
          contain=""
          height="50px"
          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTatfY9pavyXntfu-i_p8ZN9FHdn37i8SIGU58NQPcDrTLVUKaq"
        />
      </v-flex>
       
      <v-flex
        xs6=""
      >
        <v-list-tile-content>
          <v-list-tile-title>
            RabbitMQ
          </v-list-tile-title>
        </v-list-tile-content>
      </v-flex>
       
      <v-flex
        class="health-status-indicator"
        xs3=""
      >
        <v-icon
          class="right"
          color="healthy"
        >
          mdi-check-circle-outline
        </v-icon>
      </v-flex>
    </v-layout>
  </v-list-tile>
</div>
`;

exports[`Storyshots Health/Dependency List With Degraded Status 1`] = `
<div>
  <v-subheader>
    Dependencies
  </v-subheader>
   
  <v-list-tile>
    <v-layout
      class="service-dependency-item"
      row=""
    >
      <v-flex
        xs3=""
      >
        <v-img
          contain=""
          height="50px"
          src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1200px-Postgresql_elephant.svg.png"
        />
      </v-flex>
       
      <v-flex
        xs6=""
      >
        <v-list-tile-content>
          <v-list-tile-title>
            Postgres
          </v-list-tile-title>
        </v-list-tile-content>
      </v-flex>
       
      <v-flex
        class="health-status-indicator"
        xs3=""
      >
        <v-icon
          class="right"
          color="healthy"
        >
          mdi-check-circle-outline
        </v-icon>
      </v-flex>
    </v-layout>
  </v-list-tile>
  <v-list-tile>
    <v-layout
      class="service-dependency-item"
      row=""
    >
      <v-flex
        xs3=""
      >
        <v-img
          contain=""
          height="50px"
          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTatfY9pavyXntfu-i_p8ZN9FHdn37i8SIGU58NQPcDrTLVUKaq"
        />
      </v-flex>
       
      <v-flex
        xs6=""
      >
        <v-list-tile-content>
          <v-list-tile-title>
            RabbitMQ
          </v-list-tile-title>
        </v-list-tile-content>
      </v-flex>
       
      <v-flex
        class="health-status-indicator"
        xs3=""
      >
        <v-icon
          class="right"
          color="degraded"
        >
          mdi-alert
        </v-icon>
      </v-flex>
    </v-layout>
  </v-list-tile>
</div>
`;

exports[`Storyshots Health/Dependency List With Error Status 1`] = `
<div>
  <v-subheader>
    Dependencies
  </v-subheader>
   
  <v-list-tile>
    <v-layout
      class="service-dependency-item"
      row=""
    >
      <v-flex
        xs3=""
      >
        <v-img
          contain=""
          height="50px"
          src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1200px-Postgresql_elephant.svg.png"
        />
      </v-flex>
       
      <v-flex
        xs6=""
      >
        <v-list-tile-content>
          <v-list-tile-title>
            Postgres
          </v-list-tile-title>
        </v-list-tile-content>
      </v-flex>
       
      <v-flex
        class="health-status-indicator"
        xs3=""
      >
        <v-icon
          class="right"
          color="healthy"
        >
          mdi-check-circle-outline
        </v-icon>
      </v-flex>
    </v-layout>
  </v-list-tile>
  <v-list-tile>
    <v-layout
      class="service-dependency-item"
      row=""
    >
      <v-flex
        xs3=""
      >
        <v-img
          contain=""
          height="50px"
          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTatfY9pavyXntfu-i_p8ZN9FHdn37i8SIGU58NQPcDrTLVUKaq"
        />
      </v-flex>
       
      <v-flex
        xs6=""
      >
        <v-list-tile-content>
          <v-list-tile-title>
            RabbitMQ
          </v-list-tile-title>
        </v-list-tile-content>
      </v-flex>
       
      <v-flex
        class="health-status-indicator"
        xs3=""
      >
        <v-icon
          class="right"
          color="error"
        >
          error
        </v-icon>
      </v-flex>
    </v-layout>
  </v-list-tile>
</div>
`;

exports[`Storyshots Health/Health Card Degraded 1`] = `
<v-card
  class="health-card dashboard-card-small"
>
  <v-icon
    class="right status-icon"
    color="degraded"
  >
    mdi-alert
  </v-icon>
   
  <v-card-title
    primary-title=""
  >
    <v-layout
      row=""
    >
      <v-flex
        xs2=""
      >
        <div
          class="card-img"
        >
          <v-icon
            class="service-icon"
            color="degraded"
            size="50"
          >
            mdi-account-circle
          </v-icon>
        </div>
      </v-flex>
       
      <v-flex
        xs10=""
      >
        <v-subheader>
          Identity Service
        </v-subheader>
      </v-flex>
    </v-layout>
  </v-card-title>
   
  <v-card-content>
    <v-card-actions>
      <v-btn
        flat=""
      >
        Details
      </v-btn>
       
      <v-spacer />
       
      <v-btn
        icon=""
      >
        <v-icon>
          mdi-chevron-down
        </v-icon>
      </v-btn>
    </v-card-actions>
     
    <v-slide-y-transition
      style="display: none;"
    >
      <v-list
        style="display: none;"
        subheader=""
        two-line=""
      >
        <div>
          <v-subheader>
            Dependencies
          </v-subheader>
           
          <v-list-tile>
            <v-layout
              class="service-dependency-item"
              row=""
            >
              <v-flex
                xs3=""
              >
                <v-img
                  contain=""
                  height="50px"
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1200px-Postgresql_elephant.svg.png"
                />
              </v-flex>
               
              <v-flex
                xs6=""
              >
                <v-list-tile-content>
                  <v-list-tile-title>
                    Postgres
                  </v-list-tile-title>
                </v-list-tile-content>
              </v-flex>
               
              <v-flex
                class="health-status-indicator"
                xs3=""
              >
                <v-icon
                  class="right"
                  color="healthy"
                >
                  mdi-check-circle-outline
                </v-icon>
              </v-flex>
            </v-layout>
          </v-list-tile>
          <v-list-tile>
            <v-layout
              class="service-dependency-item"
              row=""
            >
              <v-flex
                xs3=""
              >
                <v-img
                  contain=""
                  height="50px"
                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTatfY9pavyXntfu-i_p8ZN9FHdn37i8SIGU58NQPcDrTLVUKaq"
                />
              </v-flex>
               
              <v-flex
                xs6=""
              >
                <v-list-tile-content>
                  <v-list-tile-title>
                    RabbitMQ
                  </v-list-tile-title>
                </v-list-tile-content>
              </v-flex>
               
              <v-flex
                class="health-status-indicator"
                xs3=""
              >
                <v-icon
                  class="right"
                  color="healthy"
                >
                  mdi-check-circle-outline
                </v-icon>
              </v-flex>
            </v-layout>
          </v-list-tile>
        </div>
      </v-list>
    </v-slide-y-transition>
  </v-card-content>
</v-card>
`;

exports[`Storyshots Health/Health Card Error 1`] = `
<v-card
  class="health-card dashboard-card-small"
>
  <v-icon
    class="right status-icon"
    color="error"
  >
    error
  </v-icon>
   
  <v-card-title
    primary-title=""
  >
    <v-layout
      row=""
    >
      <v-flex
        xs2=""
      >
        <div
          class="card-img"
        >
          <v-icon
            class="service-icon"
            color="error"
            size="50"
          >
            mdi-account-circle
          </v-icon>
        </div>
      </v-flex>
       
      <v-flex
        xs10=""
      >
        <v-subheader>
          Identity Service
        </v-subheader>
      </v-flex>
    </v-layout>
  </v-card-title>
   
  <v-card-content>
    <v-card-actions>
      <v-btn
        flat=""
      >
        Details
      </v-btn>
       
      <v-spacer />
       
      <v-btn
        icon=""
      >
        <v-icon>
          mdi-chevron-down
        </v-icon>
      </v-btn>
    </v-card-actions>
     
    <v-slide-y-transition
      style="display: none;"
    >
      <v-list
        style="display: none;"
        subheader=""
        two-line=""
      >
        <div>
          <v-subheader>
            Dependencies
          </v-subheader>
           
          <v-list-tile>
            <v-layout
              class="service-dependency-item"
              row=""
            >
              <v-flex
                xs3=""
              >
                <v-img
                  contain=""
                  height="50px"
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1200px-Postgresql_elephant.svg.png"
                />
              </v-flex>
               
              <v-flex
                xs6=""
              >
                <v-list-tile-content>
                  <v-list-tile-title>
                    Postgres
                  </v-list-tile-title>
                </v-list-tile-content>
              </v-flex>
               
              <v-flex
                class="health-status-indicator"
                xs3=""
              >
                <v-icon
                  class="right"
                  color="healthy"
                >
                  mdi-check-circle-outline
                </v-icon>
              </v-flex>
            </v-layout>
          </v-list-tile>
          <v-list-tile>
            <v-layout
              class="service-dependency-item"
              row=""
            >
              <v-flex
                xs3=""
              >
                <v-img
                  contain=""
                  height="50px"
                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTatfY9pavyXntfu-i_p8ZN9FHdn37i8SIGU58NQPcDrTLVUKaq"
                />
              </v-flex>
               
              <v-flex
                xs6=""
              >
                <v-list-tile-content>
                  <v-list-tile-title>
                    RabbitMQ
                  </v-list-tile-title>
                </v-list-tile-content>
              </v-flex>
               
              <v-flex
                class="health-status-indicator"
                xs3=""
              >
                <v-icon
                  class="right"
                  color="healthy"
                >
                  mdi-check-circle-outline
                </v-icon>
              </v-flex>
            </v-layout>
          </v-list-tile>
        </div>
      </v-list>
    </v-slide-y-transition>
  </v-card-content>
</v-card>
`;

exports[`Storyshots Health/Health Card Healthy 1`] = `
<v-card
  class="health-card dashboard-card-small"
>
  <v-icon
    class="right status-icon"
    color="healthy"
  >
    mdi-check-circle-outline
  </v-icon>
   
  <v-card-title
    primary-title=""
  >
    <v-layout
      row=""
    >
      <v-flex
        xs2=""
      >
        <div
          class="card-img"
        >
          <v-icon
            class="service-icon"
            color="healthy"
            size="50"
          >
            mdi-account-circle
          </v-icon>
        </div>
      </v-flex>
       
      <v-flex
        xs10=""
      >
        <v-subheader>
          Identity Service
        </v-subheader>
      </v-flex>
    </v-layout>
  </v-card-title>
   
  <v-card-content>
    <v-card-actions>
      <v-btn
        flat=""
      >
        Details
      </v-btn>
       
      <v-spacer />
       
      <v-btn
        icon=""
      >
        <v-icon>
          mdi-chevron-down
        </v-icon>
      </v-btn>
    </v-card-actions>
     
    <v-slide-y-transition
      style="display: none;"
    >
      <v-list
        style="display: none;"
        subheader=""
        two-line=""
      >
        <div>
          <v-subheader>
            Dependencies
          </v-subheader>
           
          <v-list-tile>
            <v-layout
              class="service-dependency-item"
              row=""
            >
              <v-flex
                xs3=""
              >
                <v-img
                  contain=""
                  height="50px"
                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1200px-Postgresql_elephant.svg.png"
                />
              </v-flex>
               
              <v-flex
                xs6=""
              >
                <v-list-tile-content>
                  <v-list-tile-title>
                    Postgres
                  </v-list-tile-title>
                </v-list-tile-content>
              </v-flex>
               
              <v-flex
                class="health-status-indicator"
                xs3=""
              >
                <v-icon
                  class="right"
                  color="healthy"
                >
                  mdi-check-circle-outline
                </v-icon>
              </v-flex>
            </v-layout>
          </v-list-tile>
          <v-list-tile>
            <v-layout
              class="service-dependency-item"
              row=""
            >
              <v-flex
                xs3=""
              >
                <v-img
                  contain=""
                  height="50px"
                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTatfY9pavyXntfu-i_p8ZN9FHdn37i8SIGU58NQPcDrTLVUKaq"
                />
              </v-flex>
               
              <v-flex
                xs6=""
              >
                <v-list-tile-content>
                  <v-list-tile-title>
                    RabbitMQ
                  </v-list-tile-title>
                </v-list-tile-content>
              </v-flex>
               
              <v-flex
                class="health-status-indicator"
                xs3=""
              >
                <v-icon
                  class="right"
                  color="healthy"
                >
                  mdi-check-circle-outline
                </v-icon>
              </v-flex>
            </v-layout>
          </v-list-tile>
        </div>
      </v-list>
    </v-slide-y-transition>
  </v-card-content>
</v-card>
`;
